--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,3 +1,26 @@
 * {
-font-family: Verdana
+font-family: Verdana;
+background-color: black;
+}
+
+h1 {
+  font-weight: normal;
+  font-size: 50px;
+  color: White;
+  text-align: center;
+}
+
+h2 {
+font-weight: 300;
+font-size: 42px;
+}
+
+p {
+  font-size: 21px;
+  color: Gray;
+}
+
+a {
+font-size: 16px;
+color: Aquamarine;
 }
