--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -6,7 +6,7 @@ background-color: black;
 h1 {
   font-weight: normal;
   font-size: 50px;
-  color: White;
+  color: white;
   text-align: center;
 }
 
@@ -17,10 +17,10 @@ font-size: 42px;
 
 p {
   font-size: 21px;
-  color: Gray;
+  color: gray;
 }
 
 a {
 font-size: 16px;
-color: Aquamarine;
+color: aquamarine;
 }
