--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -11,8 +11,13 @@ h1 {
 }
 
 h2 {
-font-weight: 300;
-font-size: 42px;
+  font-weight: 300;
+  font-size: 42px;
+}
+
+video {
+  width="320";
+  hight="240";
 }
 
 p {
