--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,26 +1,38 @@
 * {
 font-family: Verdana;
 background-color: black;
+text-align: center;
 }
 
 h1 {
   font-weight: normal;
   font-size: 50px;
   color: white;
-  text-align: center;
-}
+  }
 
 h2 {
   font-weight: 300;
   font-size: 42px;
+  color: white;
+  text-align: center;
 }
 
 a {
 font-size: 16px;
 color: aquamarine;
+text-align: center;
 }
 
 p {
   font-size: 21px;
   color: gray;
+}
+
+img, video {
+  margin: 0 auto;
+  display: block;
+}
+
+.signature {
+  text-align: right;
 }
